@@ -5,12 +5,12 @@
     <groupId>org.owasp.webgoat.lesson</groupId>
     <artifactId>webgoat-lessons-parent</artifactId>
     <packaging>pom</packaging>
-    <version>v8.0.0-SNAPSHOT</version>
+    <version>v8.1.0</version>
 
     <parent>
         <groupId>org.owasp.webgoat</groupId>
         <artifactId>webgoat-parent</artifactId>
-        <version>v8.0.0-SNAPSHOT</version>
+        <version>v8.1.0</version>
     </parent>
 
     <modules>
@@ -20,6 +20,8 @@
         <module>cross-site-scripting</module>
         <module>html-tampering</module>
         <module>http-basics</module>
+        <module>cia</module>
+        <module>chrome-dev-tools</module>
         <module>http-proxies</module>
         <module>insecure-login</module>
         <module>insecure-deserialization</module>
@@ -30,13 +32,15 @@
         <module>vulnerable-components</module>
         <module>webgoat-introduction</module>
         <module>webwolf-introduction</module>
-	<module>auth-bypass</module>
+        <module>auth-bypass</module>
         <module>missing-function-ac</module>
         <module>csrf</module>
         <module>password-reset</module>
         <module>ssrf</module>
-        <!-- uncomment below to include lesson template in build, also uncomment the dependency in webgoat-server/pom.xml to have it run in the project fully -->
-        <!--<module>webgoat-lesson-template</module>-->
+        <module>secure-passwords</module>
+        <module>webgoat-lesson-template</module>
+		<module>crypto</module>
+        <module>path-traversal</module>
     </modules>
 
     <dependencies>
@@ -64,7 +68,6 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>1.10.19</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -78,17 +81,7 @@
             <version>4.1.3.RELEASE</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>org.owasp.encoder</groupId>
-            <artifactId>encoder</artifactId>
-            <version>1.2</version>
-        </dependency>
-        <!-- Temporarily -->
-        <dependency>
-            <groupId>com.thoughtworks.xstream</groupId>
-            <artifactId>xstream</artifactId>
-            <version>1.4.7</version>
-        </dependency>
+        <!-- Please do not add lesson dependent libraries here, place them in the corresponding lesson -->
     </dependencies>
     <dependencyManagement>
         <dependencies>
@@ -104,28 +97,25 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>copy-artifact-src</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>copy</goal>
-                        </goals>
-                        <configuration>
-                            <overWriteIfNewer>true</overWriteIfNewer>
-                            <artifactItems>
-                                <artifactItem>
-                                    <groupId>${project.groupId}</groupId>
-                                    <artifactId>${project.artifactId}</artifactId>
-                                    <version>${project.version}</version>
-                                    <type>${project.packaging}</type>
-                                </artifactItem>
-                            </artifactItems>
-                            <outputDirectory>../../webgoat-container/src/main/resources/plugin_lessons</outputDirectory>
-                        </configuration>
-                    </execution>
-                </executions>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven-surefire-plugin.version}</version>
+                <configuration>
+                    <forkCount>0</forkCount>
+                    <reuseForks>true</reuseForks>
+                    <argLine>
+                        --illegal-access=permit
+                    </argLine>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>${maven-compiler-plugin.version}</version>
+                <configuration>
+                    <source>11</source>
+                    <target>11</target>
+                    <encoding>UTF-8</encoding>
+                </configuration>
             </plugin>
         </plugins>
     </build>
